bug squashing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,7 +208,7 @@ body{
 	top: 0;
 	background-color: #0fff9b;
 	transition: ease-in-out 1s;
-	opacity: 0;
+	opacity: 1;
 	pointer-events: none;
 }
 .loader {
@@ -291,4 +291,42 @@ body{
 	  transform: rotate(360deg);
 	}
 }
+  
+.lds-ring {
+	display: inline-block;
+	position: relative;
+	width: 160px;
+	height: 160px;
+	margin-left: calc(50vw - 80px);
+	margin-top: calc(50vh - 80px);
+  }
+  .lds-ring div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 128px;
+	height: 128px;
+	margin: 16px;
+	border: 12px solid #fff;
+	border-radius: 50%;
+	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	border-color: #fff transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+	animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+	animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+	animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+	0% {
+	  transform: rotate(0deg);
+	}
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
   
